# git-server-dashboard

./: .gitignore  Cargo.toml  README.md  TODO.md  renovate.json
.github/workflows/: build.yml
docker/: Dockerfile
example/: config.json5  docker-compose.yaml
mock/: .gitignore  .prettierignore  app.ts  generator.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
mock/definitions/: bitbucket-8.10.swagger.v3.json
mock/gitlab-mock/: Cargo.toml
mock/gitlab-mock/src/: lib.rs
mock/gitlab-mock/src/rest/: model.rs
mock/interceptor/: errorInterceptor.ts
mock/router/bitbucket/: bitbucketRouter.ts  bitbucketWebhookTrigger.ts
package/: docker.sh  package.ps1  package.sh
requests/: prupdates.http
server/: .gitignore  Cargo.toml  README.md
server/entity/: Cargo.toml
server/entity/src/: lib.rs  prelude.rs  pull_request_event.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20230306_145109_create_initial_schema.rs  m20230322_211054_add_pr_link.rs
server/src/: config.rs  logger.rs  main.rs  model.rs
server/src/adapter/: mod.rs
server/src/adapter/bitbucket/repositories/: mod.rs  model.rs  request.rs
server/src/adapter/db/: mod.rs
server/src/adapter/db/prupdates/: mod.rs  pull_request_event.rs
server/src/adapter/gitlab/repositories/: mod.rs  model.rs  request.rs
server/src/api/rest/: mod.rs  routes.rs
server/src/api/rest/endpoint/: mod.rs  prupdates.rs
server/src/api/webhook/: mod.rs  model.rs
server/src/data/: cache.rs  loader.rs  mod.rs  model.rs
server/src/data/bitbucket/: mod.rs  model.rs  request.rs
server/src/data/gitlab/: mod.rs  model.rs  request.rs
server/src/endpoint/: mod.rs  prupdates.rs  routes.rs
server/src/endpoint/webhook/: db.rs  mod.rs  model.rs
server/src/service/: mod.rs
server/src/service/prupdates/: aggregate.rs  mod.rs  model.rs  pr_event_service.rs
server/src/service/repositories/: cache.rs  loader.rs  mod.rs  model.rs
tests/e2e/: .gitignore  config.json5  package-lock.json  package.json  playwright.config.ts
tests/e2e/tests/: repositories.spec.ts
ui/: .eslintrc.json  .prettierignore  generate-component.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.module.css  App.svelte  App.tsx  index.css  index.tsx  main.css  main.ts  types.ts
ui/src/api/: dashboardData.ts
ui/src/common/card/: Card.module.css  Card.tsx
ui/src/common/loader/: Loader.module.css  Loader.tsx
ui/src/lib/: GitBranch.svelte  Loader.svelte  PipelineStatusIcon.svelte  PullRequest.svelte  PullRequestTargetBranch.svelte  RepositoryCard.svelte
ui/src/prupdates/last-seen/: last-seen.ts  storage.ts
ui/src/prupdates/pr-update-card/: PRUpdateCard.module.css  PRUpdateCard.tsx
ui/src/repositories/: fetchDashboardData.ts  fetchPRUpdates.ts  utils.ts
ui/src/repositories/git-branch/: GitBranch.module.css  GitBranch.tsx
(+7 files in other folders)
