[package]
name = "git-server-dashboard"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

axum = "0.7.2"
axum-macros = "0.4.0"
anyhow = "1.0.75"
chrono = "0.4.31"
log = "0.4.20"
log4rs = "1.2.0"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"], default-features = false }
sea-orm = { version = "0.12.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"], default-features = false }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["filter"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
config = { version = "0.13.4", features = ["json", "json5", "serde_json"], default-features = false }
