[package]
name = "git-server-dashboard"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

axum = "0.7.4"
axum-macros = "0.4.1"
anyhow = "1.0.79"
chrono = "0.4.33"
log = "0.4.20"
log4rs = "1.2.0"
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"], default-features = false }
sea-orm = { version = "0.12.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"], default-features = false }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["filter"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
config = { version = "0.13.4", features = ["json", "json5", "serde_json"], default-features = false }
