[package]
name = "git-server-dashboard"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

axum = "0.7.5"
axum-macros = "0.4.1"
anyhow = "1.0.82"
chrono = "0.4.38"
log = "0.4.21"
log4rs = "1.3.0"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.116"
strum = { version = "0.26.2", features = ["derive"], default-features = false }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["filter"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
config = { version = "0.14.0", features = ["json", "json5", "serde_json"], default-features = false }
